--- a/requirements.txt
+++ b/requirements.txt
@@ -11,18 +11,20 @@ charset-normalizer==3.3.2
 Django==5.0.4
 django-environ==0.11.2
 frozenlist==1.4.1
-google-api-core==2.18.0
+google-api-core==2.19.0
 google-api-python-client==2.127.0
 google-auth==2.29.0
 google-auth-httplib2==0.2.0
 googleapis-common-protos==1.63.0
+gunicorn==22.0.0
 httplib2==0.22.0
 idna==3.7
 multidict==6.0.5
 oauth2client==4.1.3
+packaging==24.0
 proto-plus==1.23.0
 protobuf==4.25.3
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 PyDrive==1.3.1
@@ -36,4 +38,5 @@ sqlparse==0.5.0
 tonyg-rfc3339==0.1
 uritemplate==4.1.1
 urllib3==2.2.1
+whitenoise==6.6.0
 yarl==1.9.4
